k8sBase/Traefik/traefik-install.yaml

# Traefik Deployment

kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.8
          args:
            - --api.insecure
            - --providers.kubernetesingress
            # - --global.checknewversion
            # - --entrypoints.metrics.address=:9100/tcp
            # - --entrypoints.traefik.address=:9000/tcp
            # - --entrypoints.web.address=:8000/tcp
            # - --entrypoints.websecure.address=:8443/tcp
            # - --api.dashboard=true
            # - --ping=true
            # - --metrics.prometheus=true
            # - --metrics.prometheus.entrypoint=metrics
            - --providers.kubernetescrd
            - --providers.kubernetescrd.allowCrossNamespace=true
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080

---

# Service to Expose the Traefik Load Balancer

apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: dashboard
  selector:
    app: traefik

---

# Service to Expose the Traefik Web Service

apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service

spec:
  type: LoadBalancer
  ports:
    - targetPort: web
      port: 80
  selector:
    app: traefik

---

# Ingress Route so We Can Access Traefik Dashboard 

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: test-app-route
  namespace: traefik-test
spec:
  routes:
    - match: Host(`local.traefik`)
      kind: Rule
      services:
        - name: traefik-dashboard-service
          kind: Service
          port: dashboard
